# job-application-copilot

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  dev.ps1  implementation-backlog.csv  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  backlog.md  codex-workflow.md  data-model.md  openai-pipeline.md  requirements.md  screens.md  ticket-template.md
docs/decisions/: 001-document-retrieval.md  002-background-processing.md  003-docx-generation.md  004-reference-versioning.md  ADR-005-database-foundation.md
scripts/: import-backlog.ps1  test-import-backlog.ps1
src/job_application_copilot/: __init__.py
src/job_application_copilot/config/: __init__.py  settings.py
src/job_application_copilot/domain/: __init__.py  job.py
src/job_application_copilot/observability/: __init__.py  logging.py
src/job_application_copilot/prompts/: README.md
src/job_application_copilot/repositories/: __init__.py  base.py  database.py  job_repository.py
src/job_application_copilot/repositories/migrations/: env.py
src/job_application_copilot/repositories/models/: __init__.py  job.py
src/job_application_copilot/services/: __init__.py  database_bootstrap.py  job_service.py  local_directories.py
src/job_application_copilot/ui/: app.py  dependencies.py  job_form.py
tests/: test_app.py  test_database.py  test_database_bootstrap.py  test_dev_script.py  test_job_form.py  test_job_model.py  test_job_repository.py  test_job_service.py  test_local_directories.py  test_logging.py  test_package.py  test_settings.py
(+7 files in other folders)
