[project]
name = "job-application-copilot"
version = "0.1.0"
description = "Evidence-grounded career decision and document-generation workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["streamlit (>=1.60.0,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "job_application_copilot", from = "src" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]
